tests/checker/good/no-accept-when-sending-zeros2.scilla
scilla_version 0

library NoAcceptWhenSendingZeros2Lib

let nil_message = Nil {Message}

let one_msg =
  fun(msg: Message) =>
    Cons {Message} msg nil_message

contract NoAcceptWhenSendingZeros2()

transition maybe_donate1(cond : Bool)
  match cond with
  | True =>
      m = { _tag: "foo";
            _recipient: _sender;
            _amount: Uint128 0 };
      msgs = one_msg m;
      send msgs
  | False =>
      bal <- _balance;
      m = { _tag: "foo";
            _recipient: _sender;
            _amount: bal };
      msgs = one_msg m;
      send msgs
  end
end

transition foo(cond : Bool)
  e = { _eventname : "foo" };
  event e
end

